# OpenGI

./: CMakeLists.txt  README.md
bash/: build_macOS_x86.sh  run_example.sh
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/graph/: comp_shader.cpp  comp_shader.h
src/shaders/: convert.sh  shader.comp.spv
